fixes like button css issues on mobile

--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -42,7 +42,7 @@ body {
   display: flex;
   flex-direction: row;
   height: 16px;
-  justify-content:space-between;
+  justify-content:space-evenly;
   align-items: center;
   width: 70px;
   background-color: #EFEFEF;
